--- a/app/src/main/res/layout/activity_post_register_user_details.xml
+++ b/app/src/main/res/layout/activity_post_register_user_details.xml
@@ -156,6 +156,7 @@
         android:padding="10dp"
         android:textColor="@color/black"
         android:textColorHint="@color/gray"
+        android:textCursorDrawable="@drawable/cursor_orange"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/gl_post_register_user_details_right"
         app:layout_constraintStart_toStartOf="@+id/gl_post_register_user_details_left"
@@ -183,6 +184,7 @@
         android:padding="10dp"
         android:textColor="@color/black"
         android:textColorHint="@color/gray"
+        android:textCursorDrawable="@drawable/cursor_orange"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/gl_post_register_user_details_right"
         app:layout_constraintStart_toStartOf="@+id/gl_post_register_user_details_left"
@@ -210,6 +212,7 @@
         android:padding="10dp"
         android:textColor="@color/black"
         android:textColorHint="@color/gray"
+        android:textCursorDrawable="@drawable/cursor_orange"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/gl_post_register_user_details_right"
         app:layout_constraintStart_toStartOf="@+id/gl_post_register_user_details_left"
