--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -34,6 +34,7 @@
         android:inputType="textEmailAddress"
         android:textColor="@color/black"
         android:textColorHint="@color/gray"
+        android:textCursorDrawable="@drawable/cursor_orange"
         app:layout_constraintEnd_toStartOf="@+id/gl_register_left_icons"
         app:layout_constraintStart_toStartOf="@+id/gl_register_left_of_email"
         app:layout_constraintTop_toBottomOf="@+id/tv_register_logo_description" />
@@ -49,6 +50,7 @@
         android:inputType="text"
         android:textColor="@color/black"
         android:textColorHint="@color/gray"
+        android:textCursorDrawable="@drawable/cursor_orange"
         app:layout_constraintEnd_toStartOf="@+id/gl_register_left_icons"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/gl_register_left_of_email"
@@ -65,6 +67,7 @@
         android:inputType="text"
         android:textColor="@color/black"
         android:textColorHint="@color/gray"
+        android:textCursorDrawable="@drawable/cursor_orange"
         app:layout_constraintEnd_toStartOf="@+id/gl_register_left_icons"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_register_left_of_email"
@@ -81,6 +84,7 @@
         android:inputType="textPassword"
         android:textColor="@color/black"
         android:textColorHint="@color/gray"
+        android:textCursorDrawable="@drawable/cursor_orange"
         app:layout_constraintEnd_toStartOf="@+id/gl_register_left_icons"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_register_left_of_email"
@@ -97,6 +101,7 @@
         android:inputType="textPassword"
         android:textColor="@color/black"
         android:textColorHint="@color/gray"
+        android:textCursorDrawable="@drawable/cursor_orange"
         app:layout_constraintEnd_toStartOf="@+id/gl_register_left_icons"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_register_left_of_email"
