Implemented error message when user doesn't upload a profile picture in PostRegisterUpload

--- a/app/src/main/res/layout/activity_post_register_upload_photos.xml
+++ b/app/src/main/res/layout/activity_post_register_upload_photos.xml
@@ -47,11 +47,12 @@
         android:id="@+id/constraintLayout2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/gl_right"
         app:layout_constraintStart_toStartOf="@+id/gl_left"
-        app:layout_constraintTop_toBottomOf="@+id/tv_post_register_text"
-        app:layout_constraintVertical_bias="0.100000024">
+        app:layout_constraintTop_toBottomOf="@+id/tv_post_register_upload_photos_error"
+        app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
             android:id="@+id/ll_first_row"
@@ -157,4 +158,16 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_left"
         app:layout_constraintTop_toBottomOf="@+id/tv_post_register_add_photos" />
+
+    <TextView
+        android:id="@+id/tv_post_register_upload_photos_error"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="The uppermost left container will be your pets profile picture"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toStartOf="@+id/gl_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_left"
+        app:layout_constraintTop_toBottomOf="@+id/tv_post_register_text" />
 </androidx.constraintlayout.widget.ConstraintLayout>
