Implemented DatePicker for UserProfilePageActivity

--- a/app/src/main/res/layout/activity_user_profile_page.xml
+++ b/app/src/main/res/layout/activity_user_profile_page.xml
@@ -257,33 +257,15 @@
             app:layout_constraintStart_toStartOf="@+id/gl_user_profile_left_headers"
             app:layout_constraintTop_toBottomOf="@+id/cl_user_profile_cat" />
 
-        <EditText
-            android:id="@+id/et_user_profile_birthday"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/layout_border"
-            android:ems="10"
-            android:hint="DD/MM/YYYY"
-            android:inputType="date"
-            android:padding="10dp"
-            android:textColor="@color/black"
-            android:textColorHint="@color/gray"
-            android:textCursorDrawable="@drawable/cursor_orange"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toStartOf="@+id/gl_right_user_profile"
-            app:layout_constraintStart_toStartOf="@+id/gl_left_user_profile"
-            app:layout_constraintTop_toBottomOf="@+id/tv_user_profile_birthday" />
-
         <TextView
             android:id="@+id/tv_user_profile_breed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:text="@string/breed"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="@+id/gl_user_profile_left_headers"
-            app:layout_constraintTop_toBottomOf="@+id/et_user_profile_birthday" />
+            app:layout_constraintTop_toBottomOf="@+id/cl_user_profile_page_birthday" />
 
         <EditText
             android:id="@+id/et_user_profile_breed"
@@ -351,5 +333,38 @@
             app:layout_constraintEnd_toStartOf="@+id/gl_right_user_profile"
             app:layout_constraintStart_toStartOf="@+id/gl_user_profile_left_headers"
             app:layout_constraintTop_toBottomOf="@+id/btn_user_profile_update" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_user_profile_page_birthday"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/layout_border"
+            app:layout_constraintEnd_toStartOf="@+id/gl_right_user_profile"
+            app:layout_constraintStart_toStartOf="@+id/gl_left_user_profile"
+            app:layout_constraintTop_toBottomOf="@+id/tv_user_profile_birthday">
+
+            <TextView
+                android:id="@+id/tv_user_profile_page_birthday_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:padding="10dp"
+                android:text="January 8 2020"
+                android:textColor="@color/black"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/iv_user_profile_page_calendar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_calendar" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
