--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,15 +2,25 @@
     <!-- Base application theme. -->
     <style name="Theme.Tindergree" parent="Theme.AppCompat.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/orangeAppColor</item>
+        <item name="colorPrimaryVariant">@color/orangeAppColor</item>
+        <item name="colorOnPrimary">@color/orangeAppColor</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/orangeAppColor</item>
+        <item name="colorSecondaryVariant">@color/orangeAppColor</item>
+        <item name="colorOnSecondary">@color/orangeAppColor</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/orangeAppColor</item>
         <!-- Customize your theme here. -->
     </style>
+
+
+        <style name="SplashTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+            <item name="android:windowBackground">@drawable/splash_background</item>
+            <item name="colorPrimary">@color/orangeAppColor</item>
+            <item name="colorPrimaryDark">@color/orangeAppColor</item>
+            <item name="colorAccent">@color/orangeAppColor</item>
+            <item name="android:statusBarColor">@color/orangeAppColor</item>
+        </style>
+
 </resources>
