--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,182 +1,189 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cl_login"
-    android:background="@color/white"
+
+<ScrollView android:background="@color/white"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/cl_login"
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <!-- TODO (5) Change edit text font if necessary    -->
+        <!-- TODO (5) Change edit text font if necessary    -->
 
-    <ImageView
-        android:id="@+id/iv_login_logo"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toTopOf="@+id/tv_login_logo_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
-        app:layout_constraintHorizontal_bias="0.58"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/gl_login_above_logo"
-        app:srcCompat="@drawable/orangepaw" />
+        <ImageView
+            android:id="@+id/iv_login_logo"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:scaleType="fitCenter"
+            app:layout_constraintBottom_toTopOf="@+id/tv_login_logo_name"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
+            app:layout_constraintHorizontal_bias="0.58"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/gl_login_above_logo"
+            app:srcCompat="@drawable/orangepaw" />
 
-    <TextView
-        android:id="@+id/tv_login_logo_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/logo_name"
-        android:textAllCaps="true"
-        android:textColor="@color/black"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/tv_login_logo_description"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_login_logo" />
+        <TextView
+            android:id="@+id/tv_login_logo_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/logo_name"
+            android:textAllCaps="true"
+            android:textColor="@color/black"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/tv_login_logo_description"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_login_logo" />
 
-    <TextView
-        android:id="@+id/tv_login_logo_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/logo_description"
-        android:textAllCaps="true"
-        android:textColor="@color/black"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_login_logo_name" />
+        <TextView
+            android:id="@+id/tv_login_logo_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/logo_description"
+            android:textAllCaps="true"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_login_logo_name" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gl_login_left_of_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="0dp"
-        app:layout_constraintGuide_percent="0.10" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gl_login_left_of_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="0dp"
+            app:layout_constraintGuide_percent="0.10" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gl_login_right_of_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="0dp"
-        app:layout_constraintGuide_percent="0.90" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gl_login_right_of_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="0dp"
+            app:layout_constraintGuide_percent="0.90" />
 
-    <EditText
-        android:id="@+id/et_login_emailaddress"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:backgroundTint="@color/gray"
-        android:ems="10"
-        android:hint="@string/email_hint"
-        android:inputType="textEmailAddress"
-        android:textColor="@color/black"
-        android:textColorHint="@color/gray"
-        android:textCursorDrawable="@drawable/cursor_orange"
-        app:layout_constraintEnd_toStartOf="@+id/gl_login_left_icons"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/gl_login_left_of_email"
-        app:layout_constraintTop_toBottomOf="@+id/tv_login_logo_description" />
+        <EditText
+            android:id="@+id/et_login_emailaddress"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            android:backgroundTint="@color/gray"
+            android:ems="10"
+            android:hint="@string/email_hint"
+            android:inputType="textEmailAddress"
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray"
+            android:textCursorDrawable="@drawable/cursor_orange"
+            app:layout_constraintEnd_toStartOf="@+id/gl_login_left_icons"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/gl_login_left_of_email"
+            app:layout_constraintTop_toBottomOf="@+id/tv_login_logo_description" />
 
-    <EditText
-        android:id="@+id/et_login_password"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:backgroundTint="@color/gray"
-        android:ems="10"
-        android:hint="@string/password_hint"
-        android:inputType="textPassword"
-        android:textColor="@color/black"
-        android:textColorHint="@color/gray"
-        android:textCursorDrawable="@drawable/cursor_orange"
-        app:layout_constraintEnd_toStartOf="@+id/gl_login_left_icons"
-        app:layout_constraintStart_toStartOf="@+id/gl_login_left_of_email"
-        app:layout_constraintTop_toBottomOf="@+id/et_login_emailaddress" />
+        <EditText
+            android:id="@+id/et_login_password"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:backgroundTint="@color/gray"
+            android:ems="10"
+            android:hint="@string/password_hint"
+            android:inputType="textPassword"
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray"
+            android:textCursorDrawable="@drawable/cursor_orange"
+            app:layout_constraintEnd_toStartOf="@+id/gl_login_left_icons"
+            app:layout_constraintStart_toStartOf="@+id/gl_login_left_of_email"
+            app:layout_constraintTop_toBottomOf="@+id/et_login_emailaddress" />
 
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:background="@drawable/rounded_button_orange"
-        android:backgroundTint="@color/orangeAppColor"
-        android:text="@string/login"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
-        app:layout_constraintStart_toStartOf="@+id/gl_login_left_of_email"
-        app:layout_constraintTop_toBottomOf="@+id/et_login_password" />
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/rounded_button_orange"
+            android:backgroundTint="@color/orangeAppColor"
+            android:text="@string/login"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
+            app:layout_constraintStart_toStartOf="@+id/gl_login_left_of_email"
+            app:layout_constraintTop_toBottomOf="@+id/et_login_password" />
 
-    <TextView
-        android:id="@+id/tv_login_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:clickable="true"
-        android:onClick="onClick"
-        android:text="@string/first_time"
-        android:textColor="@color/red"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
-        app:layout_constraintStart_toStartOf="@+id/gl_login_left_of_email"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+        <TextView
+            android:id="@+id/tv_login_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:clickable="true"
+            android:onClick="onClick"
+            android:text="@string/first_time"
+            android:textColor="@color/red"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
+            app:layout_constraintStart_toStartOf="@+id/gl_login_left_of_email"
+            app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gl_login_above_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="0dp"
-        app:layout_constraintGuide_percent="0.10" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gl_login_above_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="0dp"
+            app:layout_constraintGuide_percent="0.10" />
 
-    <!--    TODO (2) Check the design if it looks better without this-->
+        <!--    TODO (2) Check the design if it looks better without this-->
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gl_login_left_icons"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="0dp"
-        app:layout_constraintGuide_percent="0.80" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gl_login_left_icons"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="0dp"
+            app:layout_constraintGuide_percent="0.80" />
 
-    <ImageView
-        android:id="@+id/iv_login_email_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        app:layout_constraintBottom_toBottomOf="@+id/et_login_emailaddress"
-        app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
-        app:layout_constraintStart_toStartOf="@+id/gl_login_left_icons"
-        app:srcCompat="@drawable/ic_email" />
+        <ImageView
+            android:id="@+id/iv_login_email_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            app:layout_constraintBottom_toBottomOf="@+id/et_login_emailaddress"
+            app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
+            app:layout_constraintStart_toStartOf="@+id/gl_login_left_icons"
+            app:srcCompat="@drawable/ic_email" />
 
-    <ImageView
-        android:id="@+id/iv_login_password_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        app:layout_constraintBottom_toBottomOf="@+id/et_login_password"
-        app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
-        app:layout_constraintStart_toStartOf="@+id/gl_login_left_icons"
-        app:srcCompat="@drawable/ic_password" />
+        <ImageView
+            android:id="@+id/iv_login_password_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            app:layout_constraintBottom_toBottomOf="@+id/et_login_password"
+            app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
+            app:layout_constraintStart_toStartOf="@+id/gl_login_left_icons"
+            app:srcCompat="@drawable/ic_password" />
 
-    <ProgressBar
-        android:id="@+id/pb_login"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:translationZ="10dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:indeterminate="true"
-        android:indeterminateDrawable="@drawable/my_progress_indeterminate"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ProgressBar
+            android:id="@+id/pb_login"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:translationZ="10dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:indeterminate="true"
+            android:indeterminateDrawable="@drawable/my_progress_indeterminate"
+            app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
+
